# fiat-crypto

./: .dir-locals.el  .dir-locals.el.in  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  ACTIVE_CONTEXT.md  AUTHORS  CLAUDE.md  CONTRIBUTORS  Crypto.Fancy.Barrett256.Prod.MulMod.expected  Crypto.Fancy.Barrett256.prod_barrett_red256_correct.expected  Crypto.Fancy.Montgomery256.Prod.MontRed256.expected  Crypto.Fancy.Montgomery256.prod_montred256_correct.Assumptions.expected  Crypto.Fancy.Montgomery256.prod_montred256_correct.expected  Devil  LICENSE  LICENSE-MIT  Makefile  Makefile-coq  Makefile-coq.local  Makefile.cached  Makefile.composed  Makefile.config  Makefile.coq.local  Makefile.examples  Makefile.js-html  Makefile.lite-hardcoded  Makefile.local.common  Makefile.old-pipeline-lite-hardcoded  Makefile.old-pipeline-nobigmem-hardcoded  Makefile.standalone  Makefile.submodule  NOTES.md  README.md  Ví Binance - Cửa hàng Chrome trực tuyến.html  _CoqProject  _CoqProject.in  boringssl_notes.md  (+120 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: coq.json  dependabot.yml  make.json
.make/: cc.mk  coq.mk
Bedrock/: Nomega.v  Word.v
coqprime/: Make  Makefile
coqprime-8.4/: Makefile  README.md  _CoqProject
coqprime-8.5/: Makefile  README.md
etc/: DepsToDot.hs  additionchain.py  assert-adx.sh  author-blacklist  author-blacklist-except-fiat  bump-fiat-rust-crate-version.sh  check_stack_limit.sh  coqccache.sh  cpufreq  ensure_stack_limit.sh  freq.sh  freshen-bedrock-files.sh  governor.sh  hyperthreading.sh  machine.sh  prepare-opam-release.sh  ratios.py  sys_os_type.ml  test-run-fiat-crypto-silent-no-bedrock2.sh  test-run-fiat-crypto-silent.sh  tscfreq.c  turboboost.sh  update-opam-bounds.sh
fiat-amd64/: 10.67_ratio11074_seed2040113663254706_square_poly1305.asm  10099_eval10of50_ratio10087_seed1785685356_square_p521.asm  10483_eval10of50_ratio09540_seed10_mul_poly1305.asm  10483_eval10of50_ratio09540_seed1785685356_mul_poly1305.asm  105.50_ratio12370_seed1660769872531946_mul_secp256k1.asm  10541_eval10of50_ratio09504_seed1785685356_square_poly1305.asm  106.45_ratio07095_seed2797871388934122_square_p448_solinas.asm  10643_eval10of50_ratio09374_seed1785685356_square_curve25519.asm  10748_eval10of50_ratio09377_seed1785685356_mul_curve25519.asm  108.18_ratio13200_seed1947243449658116_square_secp256k1.asm  109.09_run500of10000_ratio05166_seed239269960_square_p448_solinas.asm  109.83_ratio10963_seed1201025027389101_square_secp256k1.asm  10_ratio11074_seed2040113663254706_square_poly1305.asm  110.11_ratio07038_seed1926673388220806_square_p448_solinas.asm  114.99_ratio08834_seed3078291382487252_square_p448_solinas.asm  119.02_ratio09671_seed3926842789276768_mul_p521.asm  127.14_ratio07783_seed3468290092887263_square_p448_solinas.asm  12771_eval10of50_ratio07967_seed1785685356_mul_p521.asm  13.24_ratio11452_seed2385502359727706_mul_poly1305.asm  13.88_ratio11342_seed989931496276831_square_poly1305.asm  133.57_ratio10625_seed3179949323651885_mul_p521.asm  136.51_ratio08055_seed4259079871647348_square_p384.asm  137.18_ratio08632_seed3764303852282748_mul_p384.asm  141.31_ratio10675_seed3277703234885713_square_p521.asm  144.28_ratio10700_seed380019983455042_mul_p521.asm  145.56_ratio10351_seed3475301888420410_mul_p521.asm  15065_eval10of50_ratio08981_seed1785685356_square_p521.asm  15755_eval10of50_ratio06439_seed1785685356_mul_p448_solinas.asm  16.02_ratio12241_seed4460917673401922_square_curve25519.asm  16.35_ratio10468_seed202140007933080_mul_poly1305.asm  16232_ratio11549_seed1785685356_square_poly1305.asm  163.02_ratio13059_seed2414091731930389_mul_p521.asm  17.71_ratio10643_seed3175310705764234_mul_poly1305.asm  17654_eval10of50_ratio05675_seed1785685356_square_p448_solinas.asm  177.17_ratio07019_seed3549696848003676_square_p448_solinas.asm  178.66_ratio06168_seed42736280487937_mul_p448_solinas.asm  185.66_ratio06892_seed3983286574960897_mul_p448_solinas.asm  187.54_ratio07467_seed95742508246954_mul_p448_solinas.asm  19.84_run0of10000_ratio08458_seed281000036_mul_poly1305.asm  19.90_ratio09545_seed4133336594047700_square_poly1305.asm  (+114 more)
fiat-crypto-lean/: Makefile
fiat-go/: README.md  go.mod
fiat-html/: copy-button.js  disable-wasm-option.js  fiat-crypto.html  fiat_crypto_worker.js  file-input.js  index.html  main.js  wasm_fiat_crypto_worker.js
fiat-rust/: Cargo.toml  LICENSE  README.md
fiat-rust/src/: curve25519_32.rs  curve25519_64.rs  curve25519_scalar_32.rs  curve25519_scalar_64.rs  curve25519_solinas_64.rs  lib.rs  p224_32.rs  p224_64.rs  p256_32.rs  p256_64.rs  p256_scalar_32.rs  p256_scalar_64.rs  p384_32.rs  p384_64.rs  p384_scalar_32.rs  p384_scalar_64.rs  p434_32.rs  p434_64.rs  p448_solinas_32.rs  p448_solinas_64.rs  p521_32.rs  p521_64.rs  poly1305_32.rs  poly1305_64.rs  secp256k1_32.rs  secp256k1_64.rs  secp256k1_dettman_32.rs  secp256k1_dettman_64.rs  secp256k1_montgomery_32.rs  secp256k1_montgomery_64.rs  secp256k1_montgomery_scalar_32.rs  secp256k1_montgomery_scalar_64.rs  secp256k1_scalar_32.rs  secp256k1_scalar_64.rs  sm2_32.rs  sm2_64.rs  sm2_scalar_32.rs  sm2_scalar_64.rs
fiat-zig/: build.zig
inversion-c/: inversion.c  inversion_template.c  montgomery_inversion.c  p224_32.c  p224_32_test.c  p224_64.c  p224_64_test.c  p384_32.c  p384_32_test.c  p434_64.c  p434_64_test.c  readme.txt  test-inversion.c
(+19955 files in other folders)
